<resources>
    <string name="app_name">BasicForum</string>
<!--    activity公用双击返回键退出程序提示-->
    <string name="text_doubleClickToQuit">Press Again to quit</string>

    <!--activity_login登录界面布局所需文本-->
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="app_title_first">Chatter</string>
    <string name="app_title_second">Flow</string>
    <string name="textView_test">test</string>
    <string name="textView_colon">: </string>
    <string name="textView_login_welcome">Welcome back</string>
    <string name="textView_login_welcome_hint">Sign in with your account</string>
    <string name="textView_login_welcome_new_user">Create new account</string>
    <string name="textView_login_welcome_new_user_hint">Sign up with username and password</string>
    <string name="textView_login_username">Username</string>
    <string name="textView_login_pwd">Password</string>
    <string name="btn_choose_login">LOGIN</string>
    <string name="btn_choose_sign_up">SIGN UP</string>

    <!--activity_newpost新建帖子界面布局所需文本-->
    <string name="textView_newpost_header">New Article</string>
    <string name="textView_newpost_title">Title</string>
    <string name="textView_newpost_subTitle">SubTitle</string>
    <string name="textView_newpost_articleHint">Please enter...</string>
    <string name="menu_btn_send_post">Send</string>

    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>

    <string name="textView_test_long">指定TextView的最大行数。例如，将其设置为2表示最多显示两行文本，超出的部分将被省略号（...）替代。</string>
</resources>