<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg_login_colored"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_margin="0dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/btn_select_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:onClick="OnClick"
                android:text="@string/btn_choose_login"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_select_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:onClick="OnClick"
                android:text="@string/btn_choose_sign_up"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/bg_login_uncolored"
                android:orientation="vertical"
                android:padding="0dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/textView_login_username">

                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/textView_login_pwd">

                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_sign_up"
                            android:layout_width="140dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_btn_login"
                            android:onClick="OnClick"
                            android:padding="0dp"
                            android:shadowColor="#49A7EE"
                            android:shadowRadius="5"
                            android:text="@string/btn_sign_up"
                            android:textColor="@color/white">

                        </Button>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/bg_login_uncolored"
                android:orientation="vertical"
                android:padding="0dp"
                android:visibility="visible">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <LinearLayout
                    android:id="@+id/layout_loginFrame"
                    android:layout_width="340dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:alpha="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_login_welcome"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView_welcome_minus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_login_welcome_hint" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/textView_login_username">

                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/textView_login_pwd"
                            android:inputType="textPassword">

                        </EditText>

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="140dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_btn_login"
                            android:onClick="OnClick"
                            android:padding="0dp"
                            android:shadowColor="#49A7EE"
                            android:shadowRadius="5"
                            android:text="@string/btn_login"
                            android:textColor="@color/white">

                        </Button>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>