<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg_title_first"
        android:minHeight="?attr/actionBarSize"
        app:title="New Post"
        app:menu="@menu/menu_newpost"
        app:titleTextColor="@color/app_text_title_first"
        app:navigationIcon="@drawable/ic_back_light"
        android:elevation="5dp"/>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/layout_header"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <Button-->
<!--            android:id="@+id/btn_sendPost"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:background="@drawable/ic_newpost"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:ignore="TouchTargetSizeCheck, SpeakableTextPresentCheck" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_return"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:background="@drawable/ic_back"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:ignore="TouchTargetSizeCheck, SpeakableTextPresentCheck" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newpost_input_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/app_newpost_content"
            android:textColorHint="@color/app_newpost_hint"
            android:hint="@string/textView_newpost_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newpost_input_subTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/app_newpost_content"
            android:textColorHint="@color/app_newpost_hint"
            android:hint="@string/textView_newpost_subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newpost_input_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/newpost_input_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@null"
        android:enabled="true"
        android:gravity="top"
        android:hint="@string/textView_newpost_articleHint"
        android:maxHeight="100dp"
        android:minHeight="60dp"
        android:textColor="@color/app_newpost_content"
        android:textColorHint="@color/app_newpost_hint"
        android:textSize="19sp"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:maxLines="50"
        android:scrollbars="vertical"/>

</LinearLayout>